remove unnessesary pom dependencies
