# swagger.yaml
@@ -334,117 +334,6 @@ paths:
           description: Internal server error
       security:
         - APIKEY: []
-  /status:
-    get:
-      tags:
-        - Operations
-      description: Ping to this server to check the health
-      responses:
-        200:
-          description: The service is ok.
-        503:
-          description: The service is not ok.
-          schema:
-             type: string
-             title: description
-             description: The reason of the failure of the service
-  /status/notifications:
-    get:
-      tags:
-        - Operations
-      description: Get the status of the notification service
-      responses:
-        200:
-          description: The status
-          schema:
-            type: array
-            title: Notification service status
-            items:
-              type: object
-              properties:
-                notificationtypeid:
-                  description: A three character string that uniquely identifies a notification type.
-                  type: string
-                usercountenabled:
-                  description: the amount of users that have this notification type enabled.
-  /status/watchers:
-    get:
-      tags:
-        - Operations
-      description: Get the status of this watcher service
-      responses:
-        200:
-          description: The status
-          schema:
-            type: object
-            title: Watcher Service Status
-            properties:
-              servicestart:
-                description: The moment this service was first started. All statistics are from this date.
-                type: string
-                format: date-time
-              watchercounts:
-                description: The total amount of watchers
-  /status/monitor:
-    get:
-      tags:
-        - Operations
-      description: Get the status of the pathe monitor service
-      responses:
-        200:
-          description: The status
-          schema:
-            type: object
-            title: Monitor Service Status
-            properties:
-              servicestart:
-                description: The moment this service was first started. All statistics are from this date.
-                type: string
-                format: date-time
-              lastcheck:
-                description: The last timestamp of a succesfull pathé api call
-                type: string
-                format: date-time
-              lastfailedcheck:
-                description: The last timestamp of a failed pathé api call
-                type: string
-                format: date-time
-              apicallstotal:
-                description: The total amount of api calls since the start of this module
-                type: integer
-              apicallsfailed:
-                description: The total amount of failed api calls since the start of this module
-                type: integer
-              apicallstotaltoday:
-                description: The total amount of api calls today
-                type: integer
-              apicallsfailedtoday:
-                description: The total amount of failed api calls today
-                type: integer
-              apicallstotallasthour:
-                description: The total amount of api calls last hour
-                type: integer
-              apicallsfailedlasthour:
-                description: The total amount of failed api calls last hour
-                type: integer
-              pollrate:
-                description: The amount of seconds between polls at this current moment
-                type: integer
-              pollrates:
-                description: The schema of how often the api is polled in what time periods.
-                type: array
-                items:
-                  type: object
-                  properties:
-                    start:
-                      description: The moment this pollrate is activated.
-                      type: string
-                    end:
-                      description: The moment this pollrate is stopped.
-                      type: string
-                    rate:
-                      description: The amount of seconds between polls
-                      type: integer
 securityDefinitions:
   APIKEY:
     type: apiKey
